[project]
name = "argsense"
version = "1.0.0"
homepage = "https://github.com/likianta/argsense-cli"
description = "New command line interface based on Rich library."
readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
requires-python = ">=3.8"
dynamic = ["dependencies"]
license = "MIT"

[project.optional-dependencies]
gui = ["pysimplegui"]  # pip install argsense[gui]

[project.scripts]
argsense = "argsense.__main__:cli"
argsense-cli = "argsense.__main__:cli"
argsense-gui = "argsense.__main__:gui"
argsense-tui = "argsense.__main__:tui"

[tool.poetry.dependencies]
python = "^3.8"
lk-logger = "^6.0.5"
rich = "^13.9.0"

# --- TODO: GUI
pysimplegui = { version = "^5.0.0", optional = true }
#   freesimplegui = "*"
#   pyapp-window = "*"
#   streamlit = "*"
#   textual = "*"
#   trogon = "*"

[tool.poetry.group.dev.dependencies]
lk-logger = { version = "^6.0.6a0", source = "likianta" }
lk-utils = { version = "^3.3.0a12", source = "likianta" }
pyapp-window = { version = "^2.2.0b2", source = "likianta" }
pyinstrument = "^5.0.0"
streamlit = { version = "^1.45.0", python = "^3.12" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://47.102.108.149:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
