[project]
name = "argsense"
version = "1.1.0b0"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
description = "New command line interface based on Rich library."
dynamic = ["dependencies"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
gui = ["pysimplegui"]  # pip install argsense[gui]

[project.scripts]
argsense = "argsense.__main__:cli"
argsense-cli = "argsense.__main__:cli"
argsense-gui = "argsense.__main__:gui"
argsense-tui = "argsense.__main__:tui"

[project.urls]
homepage = "https://github.com/likianta/argsense-cli"

[tool.poetry.dependencies]
python = "^3.8"
lk-logger = "^6.0.6"
rich = ">=13.9.0"
# rich = "^14.0.0"

# --- TODO: GUI
pysimplegui = { version = "^5.0.0", optional = true }
#   freesimplegui = "*"
#   pyapp-window = "*"
#   streamlit = "*"
#   textual = "*"
#   trogon = "*"

[tool.poetry.group.dev.dependencies]
lk-logger = { version = "^6.0.7a1", source = "likianta" }
lk-utils = { version = "^3.3.0a17", source = "likianta" }
# pyapp-window = { version = "^2.2.0b2", source = "likianta" }
# pyinstrument = "^5.0.0"
streamlit = { version = "^1.48.0", python = "^3.12" }
streamlit-canary = { version = "^0.1.0", source = "likianta" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
