[project]
name = "argsense"
version = "1.1.1"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
description = "New command line interface based on Rich library."
dynamic = ["dependencies"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/likianta/argsense-cli"

[project.scripts]
argsense = "argsense.__main__:cli"
argsense-cli = "argsense.__main__:cli"
argsense-gui = "argsense.__main__:gui"
argsense-tui = "argsense.__main__:tui"

[tool.poetry.dependencies]
python = "^3.8"
lk-logger = "^6.0.7"
rich = "^14.0.0"

# --- TODO: GUI
# pysimplegui = { version = "^5.0.0", optional = true }
#   freesimplegui = "*"
#   pyapp-window = "*"
#   streamlit = "*"
#   textual = "*"
#   trogon = "*"

# [project.optional-dependencies]
# gui = ["pysimplegui"]  # pip install argsense[gui]

[tool.poetry.group.dev.dependencies]
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.5.2", source = "likianta" }
pyapp-window = { version = "^2.2.1a6", source = "likianta" }
# pyinstrument = "^5.0.0"
streamlit = { version = "^1.56.0", python = "^3.12" }
streamlit-canary = { version = "^0.2.1", source = "likianta", python = "^3.12" }

numpy = { version = "^2.4.4", python = "^3.12" }  # <- streamlit, python 3.14
pandas = { version = "^3.0.2", python = "^3.12" }  # <- streamlit, python 3.14
pillow = { version = "^12.2.0", python = "^3.12" }  # <- streamlit, python 3.14
pyarrow = { version = "^23.0.1", python = "^3.12" }  # <- streamlit, python 3.14
rpds-py = { version = "^0.30.0", python = "^3.12" }  # <- streamlit, python 3.14

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
